--- a/CrossSellingInBanking.Rmd
+++ b/CrossSellingInBanking.Rmd
@@ -5,7 +5,7 @@ title: '<br>
 author: Gisler Luca, Heeb Christian, Studer Aaron, Bécheiraz Léonie
 date: "`r format(Sys.time(), '%d.%m.%y')`"
 output:
-   html_document:
+   rmarkdown::github_document:
       toc: true
       toc_depth: 6
       toc_float: true
